scrollbar fixed

--- a/src/App.css
+++ b/src/App.css
@@ -46,5 +46,5 @@ li {
   display: inline-block; 
 }
 span {
-  padding: 1px;
+  padding: .5px;
 }
